--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -107,7 +107,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": null,
             "id": "d590308e",
             "metadata": {},
             "outputs": [
@@ -124,8 +124,37 @@
                 "\n",
                 "data = [4, 2, 5, 8, 6]\n",
                 "\n",
-                "st_dev = np.std(data)\n",
-                "print(f'Standard Deviation: {st_dev}')"
+                "import math\n",
+                "\n",
+                "def calculate_standard_deviation(data):\n",
+                "    num_elements = len(data)\n",
+                "\n",
+                "    if num_elements <= 1:\n",
+                "        return 0.0\n",
+                "\n",
+                "    average = calculate_average(data)\n",
+                "    std_deviation = 0.0\n",
+                "\n",
+                "    for value in data:\n",
+                "        std_deviation += (float(value) - average) ** 2\n",
+                "    std_deviation = math.sqrt(std_deviation / float(num_elements - 1))\n",
+                "\n",
+                "    return std_deviation\n",
+                "\n",
+                "def calculate_average(data):\n",
+                "    num_elements, average = len(data), 0.0\n",
+                "\n",
+                "    if num_elements <= 1:\n",
+                "        return data[0]\n",
+                "\n",
+                "    for value in data:\n",
+                "        average += float(value)\n",
+                "\n",
+                "    average = average / float(num_elements)\n",
+                "    return average\n",
+                "\n",
+                "\n",
+                "print(f\"Standard Deviation: {calculate_standard_deviation(data)}\")"
             ]
         },
         {
@@ -139,7 +168,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
